// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`state State changes updates the category 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"category\\": \\"DESIGN\\",
    \\"categoryName\\": \\"Design\\",
    \\"depth\\": null,
    \\"displayString\\": \\"5/5\\",
    \\"height\\": \\"100\\",
-   \\"medium\\": \\"Wood\\",
+   \\"medium\\": \\"VIDEO_FILM_ANIMATION\\",
    \\"title\\": \\"My Work\\",
    \\"unit\\": \\"cm\\",
    \\"width\\": \\"100\\",
    \\"year\\": \\"1983\\",
  }"
`;

exports[`state State changes updates the medium 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -2,11 +2,11 @@
    \\"category\\": \\"DESIGN\\",
    \\"categoryName\\": \\"Design\\",
    \\"depth\\": null,
    \\"displayString\\": \\"5/5\\",
    \\"height\\": \\"100\\",
-   \\"medium\\": \\"Wood\\",
+   \\"medium\\": \\"Metal\\",
    \\"title\\": \\"My Work\\",
    \\"unit\\": \\"cm\\",
    \\"width\\": \\"100\\",
    \\"year\\": \\"1983\\",
  }"
`;

exports[`state State changes updates the size metrics 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -1,9 +1,9 @@
  Object {
    \\"category\\": \\"DESIGN\\",
    \\"categoryName\\": \\"Design\\",
-   \\"depth\\": null,
+   \\"depth\\": \\"200\\",
    \\"displayString\\": \\"5/5\\",
    \\"height\\": \\"100\\",
    \\"medium\\": \\"Wood\\",
    \\"title\\": \\"My Work\\",
    \\"unit\\": \\"cm\\","
`;

exports[`state State changes updates the title 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -3,10 +3,10 @@
    \\"categoryName\\": \\"Design\\",
    \\"depth\\": null,
    \\"displayString\\": \\"5/5\\",
    \\"height\\": \\"100\\",
    \\"medium\\": \\"Wood\\",
-   \\"title\\": \\"My Work\\",
+   \\"title\\": \\"New Artwork Name\\",
    \\"unit\\": \\"cm\\",
    \\"width\\": \\"100\\",
    \\"year\\": \\"1983\\",
  }"
`;

exports[`state State changes updates the year 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -6,7 +6,7 @@
    \\"height\\": \\"100\\",
    \\"medium\\": \\"Wood\\",
    \\"title\\": \\"My Work\\",
    \\"unit\\": \\"cm\\",
    \\"width\\": \\"100\\",
-   \\"year\\": \\"1985\\",
+   \\"year\\": \\"1983\\",
  }"
`;

exports[`state is set up with empty consignment metadata 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "black",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "black",
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        keyboardVerticalOffset={15}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
                "maxWidth": 540,
                "width": "100%",
              }
            }
          >
            <RCTScrollView
              centerContent={true}
              keyboardShouldPersistTaps="handled"
            >
              <View>
                <View
                  style={
                    Object {
                      "padding": 10,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          autoFocus={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Title"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value={undefined}
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Year"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value={undefined}
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Medium"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value={undefined}
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Width"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value={undefined}
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Height"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value={undefined}
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Depth"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value=""
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "flexDirection": "row",
                          "margin": 10,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#cccccc",
                              "fontSize": 20,
                              "marginBottom": 18,
                              "marginTop": 18,
                              "paddingLeft": 20,
                              "paddingRight": 20,
                              "textAlign": "center",
                            },
                            Object {
                              "flex": 1,
                              "paddingLeft": 10,
                              "textAlign": "left",
                            },
                            Object {
                              "fontFamily": "AGaramondPro-Regular",
                            },
                          ]
                        }
                      >
                        Units
                      </Text>
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "green",
                              "borderColor": "white",
                              "borderRadius": 16,
                              "borderWidth": 1,
                              "height": 34,
                              "width": 64,
                            },
                            Object {
                              "backgroundColor": "black",
                            },
                          ]
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <View
                          style={null}
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "marginLeft": 8,
                                  "marginRight": 8,
                                  "marginTop": 9,
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              IN
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "left": 6,
                                  "position": "absolute",
                                  "right": 6,
                                  "top": 4,
                                },
                                Object {
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "black",
                                    "borderColor": "white",
                                    "borderRadius": 12,
                                    "borderWidth": 1,
                                    "height": 24,
                                    "width": 24,
                                  },
                                  Object {
                                    "borderColor": "white",
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hitSlop={undefined}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                    testID={undefined}
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "#666666",
                              "fontFamily": "AGaramondPro-Regular",
                              "fontSize": 20,
                              "paddingTop": 8,
                            }
                          }
                        >
                          Category
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#666666",
                "height": 1,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "height": 56,
              "marginBottom": 0,
              "opacity": 1,
              "paddingTop": 18,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "AvantGardeGothicITC",
                  "fontSize": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            DONE
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;

exports[`state is set up with filled consignment metadata 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "black",
          "flexBasis": 0,
          "flexGrow": 1,
          "flexShrink": 1,
        },
        undefined,
      ]
    }
  >
    <View
      style={
        Array [
          Object {
            "alignSelf": "center",
            "backgroundColor": "black",
            "height": "100%",
            "width": "100%",
          },
          undefined,
        ]
      }
    >
      <View
        keyboardVerticalOffset={15}
        onLayout={[Function]}
        style={
          Array [
            Object {
              "flex": 1,
            },
            Object {
              "paddingBottom": 0,
            },
          ]
        }
      >
        <View
          style={
            Object {
              "flexGrow": 1,
            }
          }
        >
          <View
            style={
              Object {
                "alignSelf": "center",
                "flex": 1,
                "maxWidth": 540,
                "width": "100%",
              }
            }
          >
            <RCTScrollView
              centerContent={true}
              keyboardShouldPersistTaps="handled"
            >
              <View>
                <View
                  style={
                    Object {
                      "padding": 10,
                    }
                  }
                >
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          autoFocus={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Title"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value="My Work"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Year"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value="1983"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Medium"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value="Wood"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Width"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value="100"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Height"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value="100"
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                  <View
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <TextInput
                          allowFontScaling={true}
                          autoCorrect={false}
                          clearButtonMode="while-editing"
                          keyboardAppearance="dark"
                          keyboardType="numeric"
                          onBlur={[Function]}
                          onChangeText={[Function]}
                          onFocus={[Function]}
                          onSubmitEditing={[Function]}
                          placeholder="Depth"
                          placeholderTextColor="#666666"
                          returnKeyType="next"
                          selectionColor="#cccccc"
                          style={
                            Array [
                              Object {
                                "backgroundColor": "black",
                                "color": "white",
                                "flexBasis": 0,
                                "flexGrow": 1,
                                "flexShrink": 1,
                                "fontFamily": "AGaramondPro-Regular",
                                "fontSize": 20,
                                "height": 40,
                              },
                              undefined,
                            ]
                          }
                          value=""
                        />
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                    <View
                      style={
                        Object {
                          "alignItems": "center",
                          "flex": 1,
                          "flexDirection": "row",
                          "margin": 10,
                        }
                      }
                    >
                      <Text
                        accessible={true}
                        allowFontScaling={true}
                        ellipsizeMode="tail"
                        style={
                          Array [
                            Object {
                              "color": "#cccccc",
                              "fontSize": 20,
                              "marginBottom": 18,
                              "marginTop": 18,
                              "paddingLeft": 20,
                              "paddingRight": 20,
                              "textAlign": "center",
                            },
                            Object {
                              "flex": 1,
                              "paddingLeft": 10,
                              "textAlign": "left",
                            },
                            Object {
                              "fontFamily": "AGaramondPro-Regular",
                            },
                          ]
                        }
                      >
                        Units
                      </Text>
                      <View
                        accessibilityComponentType={undefined}
                        accessibilityLabel={undefined}
                        accessibilityTraits={undefined}
                        accessible={true}
                        hasTVPreferredFocus={undefined}
                        hitSlop={undefined}
                        isTVSelectable={true}
                        nativeID={undefined}
                        onLayout={undefined}
                        onResponderGrant={[Function]}
                        onResponderMove={[Function]}
                        onResponderRelease={[Function]}
                        onResponderTerminate={[Function]}
                        onResponderTerminationRequest={[Function]}
                        onStartShouldSetResponder={[Function]}
                        style={
                          Array [
                            Object {
                              "alignItems": "center",
                              "backgroundColor": "green",
                              "borderColor": "white",
                              "borderRadius": 16,
                              "borderWidth": 1,
                              "height": 34,
                              "width": 64,
                            },
                            Object {
                              "backgroundColor": "black",
                            },
                          ]
                        }
                        testID={undefined}
                        tvParallaxProperties={undefined}
                      >
                        <View
                          style={null}
                        >
                          <View
                            style={
                              Array [
                                Object {
                                  "flexDirection": "row",
                                  "justifyContent": "space-between",
                                  "marginLeft": 8,
                                  "marginRight": 8,
                                  "marginTop": 9,
                                },
                                undefined,
                              ]
                            }
                          >
                            <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              
                            </Text>
                            <Text
                              accessible={true}
                              allowFontScaling={true}
                              ellipsizeMode="tail"
                              style={
                                Array [
                                  Object {
                                    "color": "white",
                                    "fontFamily": "AvantGardeGothicITC",
                                    "fontSize": 11,
                                    "letterSpacing": 0.75,
                                    "textAlign": "center",
                                    "width": 24,
                                  },
                                  Object {
                                    "color": "white",
                                  },
                                ]
                              }
                            >
                              IN
                            </Text>
                          </View>
                          <View
                            style={
                              Array [
                                Object {
                                  "left": 6,
                                  "position": "absolute",
                                  "right": 6,
                                  "top": 4,
                                },
                                Object {
                                  "flexDirection": "row",
                                },
                              ]
                            }
                          >
                            <View
                              style={
                                Array [
                                  Object {
                                    "backgroundColor": "black",
                                    "borderColor": "white",
                                    "borderRadius": 12,
                                    "borderWidth": 1,
                                    "height": 24,
                                    "width": 24,
                                  },
                                  Object {
                                    "borderColor": "white",
                                  },
                                ]
                              }
                            />
                          </View>
                        </View>
                      </View>
                    </View>
                  </View>
                  <View
                    accessibilityComponentType={undefined}
                    accessibilityLabel={undefined}
                    accessibilityTraits={undefined}
                    accessible={true}
                    hitSlop={undefined}
                    nativeID={undefined}
                    onLayout={undefined}
                    onResponderGrant={[Function]}
                    onResponderMove={[Function]}
                    onResponderRelease={[Function]}
                    onResponderTerminate={[Function]}
                    onResponderTerminationRequest={[Function]}
                    onStartShouldSetResponder={[Function]}
                    style={
                      Array [
                        undefined,
                        Object {
                          "alignItems": "center",
                          "flexDirection": "row",
                          "paddingVertical": 6,
                        },
                      ]
                    }
                    testID={undefined}
                  >
                    <View
                      style={
                        Array [
                          Object {
                            "margin": 10,
                          },
                          Object {
                            "flex": 1,
                            "maxHeight": 40,
                          },
                        ]
                      }
                    >
                      <View
                        style={
                          Object {
                            "flexDirection": "row",
                            "height": 40,
                          }
                        }
                      >
                        <Text
                          accessible={true}
                          allowFontScaling={true}
                          ellipsizeMode="tail"
                          style={
                            Object {
                              "color": "white",
                              "fontFamily": "AGaramondPro-Regular",
                              "fontSize": 20,
                              "paddingTop": 8,
                            }
                          }
                        >
                          Design
                        </Text>
                      </View>
                      <View
                        style={
                          Object {
                            "backgroundColor": "#666666",
                            "height": 1,
                          }
                        }
                      />
                    </View>
                  </View>
                </View>
              </View>
            </RCTScrollView>
          </View>
        </View>
        <View
          style={
            Array [
              Object {
                "backgroundColor": "#666666",
                "height": 1,
              },
              undefined,
            ]
          }
        />
        <View
          accessibilityComponentType={undefined}
          accessibilityLabel={undefined}
          accessibilityTraits={undefined}
          accessible={true}
          collapsable={undefined}
          hasTVPreferredFocus={undefined}
          hitSlop={undefined}
          isTVSelectable={true}
          nativeID={undefined}
          onLayout={undefined}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "backgroundColor": "black",
              "height": 56,
              "marginBottom": 0,
              "opacity": 1,
              "paddingTop": 18,
            }
          }
          testID={undefined}
          tvParallaxProperties={undefined}
        >
          <Text
            accessible={true}
            allowFontScaling={true}
            ellipsizeMode="tail"
            style={
              Array [
                Object {
                  "color": "white",
                  "flexBasis": 0,
                  "flexGrow": 1,
                  "flexShrink": 1,
                  "fontFamily": "AvantGardeGothicITC",
                  "fontSize": 14,
                  "textAlign": "center",
                },
                undefined,
              ]
            }
          >
            DONE
          </Text>
        </View>
      </View>
    </View>
  </View>
</View>
`;
